--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -1,7 +1,8 @@
 {
   "name": "vite-plugin-data",
-  "description": "Resolve *.data.js file exports at build-time and bundle them as JSON-only modules.",
-  "version": "0.0.0-placeholder",
+  "description": "Resolve and bundle *.data.{js,ts} file exports at build-time.",
+  "license": "ISC",
+  "version": "0.0.0-placeholder.0",
   "scripts": {
     "build": "tsc -p src/tsconfig.build.json"
   },
