--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -10,5 +10,9 @@
     "vite": "^5.2.10",
     "vite-plugin-checker": "^0.6.4",
     "vite-plugin-data": "workspace:*"
+  },
+  "dependencies": {
+    "@types/node": "^20.12.7",
+    "zod": "^3.23.4"
   }
 }
