--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -16,5 +16,12 @@
   },
   "peerDependencies": {
     "vite": "^5.2.10"
+  },
+  "dependencies": {
+    "@types/micromatch": "^4.0.7",
+    "micromatch": "^4.0.5",
+    "really-relaxed-json": "^0.3.2",
+    "ts-node": "^10.9.2",
+    "zod": "^3.23.4"
   }
 }
