--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -1,8 +1,8 @@
 {
   "name": "vite-plugin-data",
-  "description": "Resolve and bundle *.data.{js,ts} file exports at build-time.",
+  "description": "Resolve and bundle data loader file exports at build-time.",
   "license": "ISC",
-  "version": "0.0.0-placeholder.1",
+  "version": "0.1.0",
   "scripts": {
     "build": "tsc -p src/tsconfig.build.json"
   },
@@ -15,11 +15,11 @@
     }
   },
   "peerDependencies": {
-    "vite": "^5.2.10"
+    "vite": "^5.0.0"
   },
   "dependencies": {
-    "@types/micromatch": "^4.0.7",
-    "micromatch": "^4.0.5",
+    "@types/picomatch": "^2.3.3",
+    "picomatch": "^4.0.2",
     "really-relaxed-json": "^0.3.2",
     "ts-node": "^10.9.2",
     "zod": "^3.23.4"
