--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -2,7 +2,12 @@
   "name": "vite-plugin-data",
   "description": "Resolve and bundle data loader file exports at build-time.",
   "license": "ISC",
-  "version": "0.1.2",
+  "version": "0.1.3",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Shakeskeyboarde/vite-plugin-data.git",
+    "directory": "packages/plugin"
+  },
   "keywords": [
     "vite",
     "vite-plugin",
