--- a/packages/plugin/package.json
+++ b/packages/plugin/package.json
@@ -2,12 +2,13 @@
   "name": "vite-plugin-data",
   "description": "Resolve and bundle data loader file exports at build-time.",
   "license": "ISC",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "repository": {
     "type": "git",
     "url": "https://github.com/Shakeskeyboarde/vite-plugin-data.git",
     "directory": "packages/plugin"
   },
+  "homepage": "https://github.com/Shakeskeyboarde/vite-plugin-data/blob/main/packages/plugin/README.md",
   "keywords": [
     "vite",
     "vite-plugin",
