--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -12,7 +12,6 @@
     "vite-plugin-data": "workspace:*"
   },
   "dependencies": {
-    "@types/node": "^20.12.7",
-    "zod": "^3.23.4"
+    "@types/node": "^20.12.7"
   }
 }
