--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -17,6 +17,11 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Use Corepack
+        run: |
+          set -e
+          corepack enable
+
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
@@ -26,7 +31,6 @@ jobs:
       - name: Restore
         run: |
           set -e
-          corepack enable
           pnpm install --frozen-lockfile
 
       - name: Build
