ci: fix pnpm refusing to publish from checked out commit (not branch)

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -45,7 +45,4 @@ jobs:
       - name: Publish (dry-run)
         run: |
           set -e
-          pnpm config --location=project set //registry.npmjs.org/:_authToken '${NPM_TOKEN}'
-          pnpm -r publish --dry-run
-        env:
-          NPM_TOKEN: ${{secrets.NPM_TOKEN}}
+          pnpm -r publish --no-git-checks --dry-run
