--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -42,7 +42,7 @@ jobs:
           set -e
           pnpm test
 
-      - name: Publish (Dry Run)
+      - name: Publish (dry-run)
         run: |
           set -e
-          pnpm -r publish --dry-run
+          pnpm -r publish --no-git-checks --dry-run
